# Human_First_Protocol_Command_cryptographic

./: .gitignore  README.md  cli.py  pyproject.toml
human_first_protocol/: __init__.py  protocol.py  timestamp.py
proofs/: FIASANOVA_QUANTUM_SIGNATURE_PNG_ENCODED.pdf.ots  README.md.ots
tests/: test_protocol.py  test_timestamp.py
